"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2011-08-04	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-85-prsim-precharge-check-01:
	  Branch for implementeing automatic precharge invariants
		in hacprsim.  Strategy: use hacknet to produce graphical
		representation of netlist, and derive expressions from there,
		because prsim only has tree representations.
	  hacknet: add option to suppress printing of spice netlist.
		Added/updated test cases.


2011-08-19	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-90:
	  prsim: invariants expressions now evaluated lazily to 
		aggregate results, taking the last effective change
		in pull-state *before* diagnosing violations.
		This fixes ACX-PR-2315, where false-positives were
		triggered when expressions like (a | ~a) were 
		evaluated in some unspecified literal order.
		switch: PRSIM_LAZY_INVARIANTS
	  Test case added, one updated.  


2011-08-12	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-89:
	  vpi-prsim: added debug function $prsim_verbose_transport 
		for watching communicated signals between simulators.
		Added test case, documented.


2011-08-11	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-88:
	  hacprsim: added timing bounded mode which is like timing binary
		but uses override delays from after_min, after_max.
		Added new test cases, documented.


2011-08-10	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-87:
	  hacprsim: added support for channel-timing binary min:max prob
		Added one test case (random timing).  Documentation updated.


	* HACKT-00-01-04-main-00-84-86:
	  vpi-prsim: fixed failure to propagate already-established value
		from prsim back to verilog at connection-time $from_prsim.